infrastructure/observability/grafana/resources/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: gateway-internal
      namespace: networking
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - grafana.quido.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
          weight: 1
          group: ''
          kind: Service
